force-app/main/default/objects/GST_Rate__mdt/GST_Rate__mdt.object-meta.xml
<CustomObject>
    <label>GST Rate</label>
    <pluralLabel>GST Rate</pluralLabel>
</CustomObject>