force-app/main/default/objects/GST_Rate__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>