force-app/main/default/objects/GST_Rate__mdt/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>