force-app/main/default/objects/GST_Rate__mdt/fields/Star_Date__c.field-meta.xml
<CustomField>
    <fullName>Star_Date__c</fullName>
    <label>Star Date</label>
    <type>Date</type>
</CustomField>