force-app/main/default/objects/GST_Rate__mdt/listViews/Rate_Listing.listView-meta.xml
<ListView>
    <fullName>Rate_Listing</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>GST__c</columns>
    <columns>Description__c</columns>
    <columns>Star_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rate Listing</label>
</ListView>